2010-06-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Support 9.0-style hex-escaping on ancient libpq.
 test/unit/test_binarystring.cxx:
 - New
2010-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/*:
 - Lots more automatically-stored libpq config headers.
2010-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/7.3/config-internal-libpq.h:
 - Sample header for libpq 7.3.
 test/unit/test_error_verbosity.cxx:
 - Skip test of enum correspondence if libpq doesn't define the enum.
2010-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest, tools/preprelease:
 - Save copies of generated config headers.
2010-02-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure, configure.ac, configure.ac.in:
 - Fixed #104: -Werror option always used.  Thanks Ray Dassen.
 - Works around RedHat gcc 4.1 problem.
 include/pqxx/util.hxx:
 - Removed failed attempt at working around RedHat gcc 4.1 problem.
2010-02-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Hopefully fix problem with CentOS gcc 4.1, thanks Devrim Gunduz.
2010-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
 - Added empty()
 - Documented risk of empty slices triggering bugs.
 - Deprecation warning for tuple constructor; it's to become private.
2010-01-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 aclocal.m4:
 - Still struggling to get everything needed for ./configure into the repo.
 autogen.sh:
 - Try automake-1.11.
 include/Makefile.am:
 - Do need to distribute performance.hxx.
 tools/preprelease:
 - Don't run autogen.sh; just take the setup that comes out of svn.
2010-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx, test/unit/test_result_slicing.cxx:
 - Applied Daniel Frey's slicing implementation for result tuples.
2009-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/performance.hxx: