@@ -1,3 +1,6 @@
+2010-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/binarystring.cxx:
+ - Added missing 10 to hex digits.
 2010-06-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/binarystring.cxx:
  - Support 9.0-style hex-escaping on ancient libpq.
